<resources>
    <string name="app_name">Sportify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="drawer_open">Hello blank fragment</string>
    <string name="drawer_close">Hello blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="saved_card">Saved Card</string>
    <string name="saved_address">Saved Address</string>
    <string name="reset_password">Reset Password</string>
    <string name="user_profile">User Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="update_profile">Update Profile</string>
    <string name="orders">My Orders</string>
    <string name="saved_items">Saved Items</string>
    <string name="my_profile">My Profile</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>

    <string name="equipments">Equipments</string>
    <string name="clothing">Clothing</string>
    <string name="filters">Filters</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>

    <string name="product_details">Product Details</string>
    <string name="price">Price:</string>
    <string name="product_description_label">About this item</string>
    <string name="in_stock">In Stock</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="available_sizes">Available Sizes</string>
    <string name="no_sizes_available_text">No sizes available at this time</string>
    <string name="x_small_size_text">XS</string>
    <string name="small_size_text">S</string>
    <string name="medium_size_text">M</string>
    <string name="large_size_text">L</string>
    <string name="x_large_size_text">XL</string>
    <string name="available_colors">Available Colors</string>
    <string name="no_colors_available_text">No colors available at this time</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="no_images">No Images</string>

    <string name="select_quantity">Select quantity</string>
    <string name="_1">1</string>
    <string name="done">Done</string>
    <string name="cart_total">Cart Total</string>
    <string name="checkout">Checkout</string>
    <string name="shopping_cart_size">Size: %s</string>
    <string name="shopping_cart_sport">Sport: %s</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="suite_input_hint">Apt. or Building #</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="state_province_region">State/Province/Region</string>
    <string name="postal_code">Postal Code</string>
    <string name="save_address_hint">Use this address for future deliveries</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
    <string name="addresses">Addresses</string>
    <string name="no_addresses_text">No addresses found.\n\nTap \'+\' icon in the top-right corner to\nadd a new address</string>
    <string name="add_address">Add Address</string>
    <string name="delivery">Delivery</string>
    <string name="edit">Edit</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="shipping">Shipping</string>
    <string name="payment_header">Enter your payment details</string>
    <string name="name_on_card">Name on Card</string>
    <string name="card_number">Card Number</string>
    <string name="expiry">Expiry(MM/YY)</string>
    <string name="cvv">CVV</string>
    <string name="save_card_text">Save card for later</string>
    <string name="total">Total</string>
    <string name="tax">Tax@15%</string>
    <string name="payment_details">Payment Details</string>
    <string name="place_order">Place Order</string>
    <string name="payment">Payment</string>
    <string name="sport">Sport</string>
    <string name="equipment_details">Equipment Details</string>
    <string name="shopping_cart_empty_text">Shopping Cart Empty</string>

    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="declined">Declined</string>
    <string name="cancelled">Cancelled</string>
    <string name="favorites">Favorites</string>

    <string name="empty_products_msg">No products available</string>
    <string name="empty_equipments_msg">No Equipments available</string>

    <string name="mapbox_access_token">pk.eyJ1Ijoic2FpbmloYXJzaW1yYW4iLCJhIjoiY2tyaW53ZW1yMGNyeDJ6cXJrYnlyZ2E0NCJ9.Ayuegm9VBfyvTX8ufg00jA</string>
    <string name="search_address">Search Address</string>

    <string name="empty_search_results">No addresses found</string>

    <string name="name">Name</string>
    <string name="delete">Delete</string>

    <string name="delete_address_title">Delete</string>
    <string name="delete_address_message">Are you sure your want to delete this address?</string>

    <string name="cancel">Cancel</string>

    <string name="return_policy"><u>Return Policy</u></string>
    <string name="current_location">Current Location</string>

    <string name="order_successful_popup_title">Order confirmation</string>
    <string name="order_successful_popup_message">Yay! Your order was placed successfully :)</string>
    <string name="ok">OK</string>
</resources>