<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/size_l"
        android:paddingVertical="@dimen/size_l">

        <TextView
            android:id="@+id/product_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            android:textAppearance="?textAppearanceBody1"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="LE Light Bulb, 15W A19 E26 LED Bulb 100W Equivalent, Non-dimmable 1500lm Daylight White Light Bulb, 6 Packs" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/size_l"
            app:layout_constraintDimensionRatio="H,16:9"
            app:layout_constraintTop_toBottomOf="@id/product_title_text"
            tools:background="@color/grey" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_l"
            android:textAppearance="?textAppearanceBody2"
            android:textColor="@color/faded_red"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewpager"
            tools:text="$23.99" />

        <TextView
            android:id="@+id/product_sale_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_s"
            android:layout_marginRight="@dimen/size_s"
            android:textAppearance="?textAppearanceBody2"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBaseline_toBaselineOf="@id/product_price"
            app:layout_constraintEnd_toStartOf="@id/product_price"
            tools:text="$35.99"
            tools:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_s"
            android:layout_marginRight="@dimen/size_s"
            android:text="@string/price"
            android:textAppearance="?textAppearanceBody2"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@id/product_price"
            app:layout_constraintEnd_toStartOf="@id/product_sale_price" />

        <TextView
            android:id="@+id/stock_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_m"
            android:text="@string/in_stock"
            android:textAppearance="?textAppearanceBody1"
            android:textColor="@color/green"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_price" />

        <TextView
            android:id="@+id/product_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_l"
            android:text="@string/product_description_label"
            android:textAppearance="?textAppearanceSubtitle2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stock_text" />

        <TextView
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_s"
            android:textAppearance="?textAppearanceBody2"
            app:layout_constraintTop_toBottomOf="@id/product_description_label"
            tools:text="This lotion now supports a 3-year use. New verified expiration date sticker provided on bottle, verified by CeraVe. Actual product package may vary from image " />

        <TextView
            android:id="@+id/available_sizes_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_l"
            android:text="@string/available_sizes"
            android:textAppearance="?textAppearanceSubtitle2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_description" />

        <TextView
            android:id="@+id/no_sizes_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_s"
            android:text="@string/no_sizes_available_text"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/available_sizes_label" />

        <RadioGroup
            android:id="@+id/sizes_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/available_sizes_label">

            <RadioButton
                android:id="@+id/xs_size_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/x_small_size_text" />

            <RadioButton
                android:id="@+id/s_size_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/small_size_text" />

            <RadioButton
                android:id="@+id/m_size_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/medium_size_text" />

            <RadioButton
                android:id="@+id/l_size_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/large_size_text" />

            <RadioButton
                android:id="@+id/xl_size_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/x_large_size_text" />

        </RadioGroup>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/sizes_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="no_sizes_text,sizes_group" />

        <TextView
            android:id="@+id/available_colors_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_l"
            android:text="@string/available_colors"
            android:textAppearance="?textAppearanceSubtitle2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sizes_barrier" />

        <TextView
            android:id="@+id/no_colors_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_s"
            android:text="@string/no_colors_available_text"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/available_colors_label"
            tools:visibility="visible" />

        <RadioButton
            android:id="@+id/colors_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/available_colors_label" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/colors_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="no_colors_text,available_colors_label" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_to_cart_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_l"
            android:text="@string/add_to_cart"
            app:layout_constraintTop_toBottomOf="@id/colors_barrier"
            app:strokeColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buy_now_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_s"
            android:text="@string/buy_now"
            app:layout_constraintTop_toBottomOf="@id/add_to_cart_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>