<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/size_l">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_quantity"
        android:textAppearance="?textAppearanceHeadline6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_l"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <ImageButton
                android:id="@+id/decrement_button"
                android:layout_width="@dimen/size_xxxl"
                android:layout_height="@dimen/size_xxxl"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ciruclar_bg"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_remove" />

        </FrameLayout>

        <TextView
            android:id="@+id/quantity_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_1"
            android:textAppearance="?textAppearanceHeadline4"
            android:textColor="@color/black"
            tools:text="5" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <ImageButton
                android:id="@+id/increment_button"
                android:layout_width="@dimen/size_xxxl"
                android:layout_height="@dimen/size_xxxl"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ciruclar_bg"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_add" />

        </FrameLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_l"
        android:text="@string/done" />

</LinearLayout>